# maibot-openclaw-bridge

./: .gitmodules  README.md  pyproject.toml
maibot-plugin/: _manifest.json  plugin.py
mcp-server/: README.md  server.py
openclaw-mcp-server/: README.md  server.py
openclaw-skill/: INSTALL.md  SKILL.md
src/maibot_openclaw_bridge/: __init__.py  __main__.py
