[project]
name = "maibot-openclaw-bridge"
version = "1.0.0"
description = "MCP server bridging MaiBot to OpenClaw Gateway"
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]

[project.scripts]
maibot-openclaw-bridge = "maibot_openclaw_bridge.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
